force-app/main/default/objects/Assessment__c/fields/FIRA_racterisitics_of_children__c.field-meta.xml
<CustomField>
    <fullName>FIRA_racterisitics_of_children__c</fullName>
    <inlineHelpText>Characteristics of children in the household(Select all that apply)</inlineHelpText>
    <label>Characterisitics of children</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medically fragile/failure to thrive</fullName>
            </value>
            <value>
                <fullName>Positive toxicology screen at birth</fullName>
            </value>
            <value>
                <fullName>Physical disability</fullName>
            </value>
            <value>
                <fullName>Developmental disability</fullName>
            </value>
            <value>
                <fullName>Delinquency history</fullName>
            </value>
            <value>
                <fullName>Mental health/behavior problems</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>