force-app/main/default/objects/Assessment__c/fields/FIRA_Secondary__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Secondary__c</fullName>
    <label>Secondary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Secondary Caregiver</fullName>
            </value>
            <value>
                <fullName>Arrest</fullName>
            </value>
            <value>
                <fullName>Conviction</fullName>
            </value>
            <value>
                <fullName>Felony Conviction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>