force-app/main/default/objects/Assessment__c/fields/FIRA_Secondary_care_has_alcohol_neglect__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Secondary_care_has_alcohol_neglect__c</fullName>
    <inlineHelpText>Neglect Score-Secondary Caregiver has past or current alcohol or substance abuse problem</inlineHelpText>
    <label>Secondary caregiver has alcohol neglect</label>
    <length>10</length>
    <type>Text</type>
</CustomField>