force-app/main/default/objects/Assessment__c/fields/FIRA_Secondary_Caregiver_has_alcohol__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Secondary_Caregiver_has_alcohol__c</fullName>
    <inlineHelpText>Secondary Caregiver has past or current alcohol or substance abuse problem</inlineHelpText>
    <label>Secondary Caregiver has alcohol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Secondary Caregiver</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>