force-app/main/default/objects/Assessment__c/fields/FIRA_Secondary_Drugs_value__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Secondary_Drugs_value__c</fullName>
    <inlineHelpText>Secondary Caregiver Drugs Value</inlineHelpText>
    <label>Drugs value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currently in treatment</fullName>
            </value>
            <value>
                <fullName>Not engaged in treatment</fullName>
            </value>
            <value>
                <fullName>Unknown treatment Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>