force-app/main/default/objects/Assessment__c/fields/FIRA_Supervisor_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Supervisor_Reviewed_Date__c</fullName>
    <label>Supervisor Reviewed Date</label>
    <type>Date</type>
</CustomField>