force-app/main/default/objects/Assessment__c/fields/FIRA_Two_or_more_incidents__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Two_or_more_incidents__c</fullName>
    <inlineHelpText>Two or more incidents of domestic violence in the household in the past year</inlineHelpText>
    <label>Two or more incidents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>