force-app/main/default/objects/Assessment__c/fields/FIRA_Two_or_more_incidents_neglect__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Two_or_more_incidents_neglect__c</fullName>
    <inlineHelpText>Neglect score-Two or more incidents of domestic violence in the household in the past year</inlineHelpText>
    <label>Two or more incidents neglect</label>
    <length>10</length>
    <type>Text</type>
</CustomField>