force-app/main/default/objects/Assessment__c/fields/FRRE_Date_Assessment_Initiated__c.field-meta.xml
<CustomField>
    <fullName>FRRE_Date_Assessment_Initiated__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date Assessment Initiated</label>
    <type>DateTime</type>
</CustomField>