force-app/main/default/objects/Assessment__c/fields/Household_previously_received_CPS__c.field-meta.xml
<CustomField>
    <fullName>Household_previously_received_CPS__c</fullName>
    <inlineHelpText>Household previously received CPS response(voluntary/court-ordered)</inlineHelpText>
    <label>Household previously received CPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None(0)</fullName>
                <default>true</default>
                <label>None(0)</label>
            </value>
            <value>
                <fullName>One(1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>