force-app/main/default/objects/Assessment__c/fields/Housing_Abuse_Score__c.field-meta.xml
<CustomField>
    <fullName>Housing_Abuse_Score__c</fullName>
    <inlineHelpText>Abuse score-Housing(Select all that apply)</inlineHelpText>
    <label>Housing Abuse Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>