force-app/main/default/objects/Assessment__c/fields/If_the_child_had_a_history_of_sexual__c.field-meta.xml
<CustomField>
    <fullName>If_the_child_had_a_history_of_sexual__c</fullName>
    <inlineHelpText>If the child had a history of sexual behaviors, their needs are being or will be addressed and managed to prevent immediate danger to self or others</inlineHelpText>
    <label>If the child had a history of sexual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>