force-app/main/default/objects/Assessment__c/fields/In_home_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>In_home_Assigned_Date__c</fullName>
    <formula>IF(ISBLANK(Service_Case__c), DATEVALUE(Investigation__r.CreatedDate),DATEVALUE(Service_Case__r.CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>