force-app/main/default/objects/Assessment__c/fields/In_home_completed_Date__c.field-meta.xml
<CustomField>
    <fullName>In_home_completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>