force-app/main/default/objects/Assessment__c/fields/Initial_Replacement_Placements__c.field-meta.xml
<CustomField>
    <fullName>Initial_Replacement_Placements__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Initial/Replacement Placements.</inlineHelpText>
    <label>Initial/Replacement Placements.</label>
    <type>Checkbox</type>
</CustomField>