force-app/main/default/objects/Assessment__c/fields/Name_of_Placement_Resource__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Placement_Resource__c</fullName>
    <label>Name of Placement Resource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>