force-app/main/default/objects/Assessment__c/fields/New_CPS_response_of_abuse_or_neglect__c.field-meta.xml
<CustomField>
    <fullName>New_CPS_response_of_abuse_or_neglect__c</fullName>
    <inlineHelpText>New CPS response of abuse or neglect since the MFIRA or the last MFRRA</inlineHelpText>
    <label>New CPS response of abuse or neglect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No(0)</fullName>
                <default>true</default>
                <label>No(0)</label>
            </value>
            <value>
                <fullName>Yes(1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>