force-app/main/default/objects/Assessment__c/fields/No_Secondary_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>No_Secondary_Caregiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Caregiver</label>
    <type>Checkbox</type>
</CustomField>