force-app/main/default/objects/Assessment__c/fields/OHP_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>OHP_Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>