force-app/main/default/objects/Assessment__c/fields/OHP_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>OHP_Approval_Status__c</fullName>
    <label>Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>