force-app/main/default/objects/Assessment__c/fields/OHP_Child_is_Safe_Influences_1_12_Marked__c.field-meta.xml
<CustomField>
    <fullName>OHP_Child_is_Safe_Influences_1_12_Marked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Child is Safe (Influences 1-12 Marked &quot;YES&quot;)</inlineHelpText>
    <label>Child is Safe (Influences 1-12 Marked</label>
    <type>Checkbox</type>
</CustomField>