force-app/main/default/objects/Assessment__c/fields/OHP_Child_is_Unsafe_Any_Influence_1_12__c.field-meta.xml
<CustomField>
    <fullName>OHP_Child_is_Unsafe_Any_Influence_1_12__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Child is Unsafe (Any Influence 1-12 Was checked &quot;NO&quot;)</inlineHelpText>
    <label>Child is Unsafe (Any Influence 1-12</label>
    <type>Checkbox</type>
</CustomField>