force-app/main/default/objects/Assessment__c/fields/OHP_Child_Name__c.field-meta.xml
<CustomField>
    <fullName>OHP_Child_Name__c</fullName>
    <label>Child Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>