force-app/main/default/objects/Assessment__c/fields/OHP_Comments__c.field-meta.xml
<CustomField>
    <fullName>OHP_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>