force-app/main/default/objects/Assessment__c/fields/OHP_Ext__c.field-meta.xml
<CustomField>
    <fullName>OHP_Ext__c</fullName>
    <label>Ext</label>
    <length>50</length>
    <type>Text</type>
</CustomField>