force-app/main/default/objects/Assessment__c/fields/OHP_Fax__c.field-meta.xml
<CustomField>
    <fullName>OHP_Fax__c</fullName>
    <label>Fax</label>
    <length>10</length>
    <type>Text</type>
</CustomField>