force-app/main/default/objects/Assessment__c/fields/OHP_If_Placed_with_Potential_Resource__c.field-meta.xml
<CustomField>
    <fullName>OHP_If_Placed_with_Potential_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If Placed with the Potential Resource</label>
    <type>Checkbox</type>
</CustomField>