force-app/main/default/objects/Assessment__c/fields/OHP_Local_Department__c.field-meta.xml
<CustomField>
    <fullName>OHP_Local_Department__c</fullName>
    <label>Local Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>