force-app/main/default/objects/Assessment__c/fields/OHP_Representative_Title__c.field-meta.xml
<CustomField>
    <fullName>OHP_Representative_Title__c</fullName>
    <label>Representative / Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>