force-app/main/default/objects/Assessment__c/fields/OHP_Safety_Decision__c.field-meta.xml
<CustomField>
    <fullName>OHP_Safety_Decision__c</fullName>
    <label>Safety Decision</label>
    <type>DateTime</type>
</CustomField>