force-app/main/default/objects/Assessment__c/fields/OHP_Signature_Obtained__c.field-meta.xml
<CustomField>
    <fullName>OHP_Signature_Obtained__c</fullName>
    <label>Signature Obtained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>