force-app/main/default/objects/Assessment__c/fields/OHP_Signature_Obtained_Date__c.field-meta.xml
<CustomField>
    <fullName>OHP_Signature_Obtained_Date__c</fullName>
    <label>Signature Obtained Date</label>
    <type>DateTime</type>
</CustomField>