force-app/main/default/objects/Assessment__c/fields/OHP_Unsafe_Influences__c.field-meta.xml
<CustomField>
    <fullName>OHP_Unsafe_Influences__c</fullName>
    <inlineHelpText>Unsafe Influences Identified</inlineHelpText>
    <label>Unsafe Influences Identified</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>