force-app/main/default/objects/Assessment__c/fields/OHP_Whereabouts_of_Child_Youth__c.field-meta.xml
<CustomField>
    <fullName>OHP_Whereabouts_of_Child_Youth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whereabouts of Child/Youth is Unknown</label>
    <type>Checkbox</type>
</CustomField>