force-app/main/default/objects/Assessment__c/fields/OHP_Work__c.field-meta.xml
<CustomField>
    <fullName>OHP_Work__c</fullName>
    <label>Work</label>
    <length>50</length>
    <type>Text</type>
</CustomField>