force-app/main/default/objects/Assessment__c/fields/OHP_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>OHP_Zipcode__c</fullName>
    <label>Zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>