force-app/main/default/objects/Assessment__c/fields/PLANNED_ACTION__c.field-meta.xml
<CustomField>
    <fullName>PLANNED_ACTION__c</fullName>
    <label>PLANNED ACTION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continue services</fullName>
                <default>true</default>
                <label>Continue services</label>
            </value>
            <value>
                <fullName>Close Note: A closing SAFE -C is required.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>