force-app/main/default/objects/Assessment__c/fields/Potential_Resource__c.field-meta.xml
<CustomField>
    <fullName>Potential_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Resource</label>
    <type>Checkbox</type>
</CustomField>