force-app/main/default/objects/Assessment__c/fields/Primary_caregiver_alcohol_or_substance__c.field-meta.xml
<CustomField>
    <fullName>Primary_caregiver_alcohol_or_substance__c</fullName>
    <inlineHelpText>Primary caregiver alcohol or substance abuse since the MFIRA or the last MFRRA</inlineHelpText>
    <label>Primary caregiver alcohol or substance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No history of alcohol or substance abuse problem (0)</fullName>
                <default>true</default>
                <label>No history of alcohol or substance abuse problem (0)</label>
            </value>
            <value>
                <fullName>No current alcohol or substance abuse problem; no intervention needed (0)</fullName>
            </value>
            <value>
                <fullName>Yes, alcohol or substance abuse problem; problem is being addressed (0)</fullName>
            </value>
            <value>
                <fullName>Yes, alcohol or substance abuse problem; problem is not being addressed(1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>