force-app/main/default/objects/Assessment__c/fields/Primary_caregiver_has_a_history_of_abuse__c.field-meta.xml
<CustomField>
    <fullName>Primary_caregiver_has_a_history_of_abuse__c</fullName>
    <inlineHelpText>Primary caregiver has a history of abuse or neglect as a child</inlineHelpText>
    <label>Primary caregiver has a history of abuse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No(0)</fullName>
                <default>true</default>
                <label>No(0)</label>
            </value>
            <value>
                <fullName>Yes(1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>