force-app/main/default/objects/Assessment__c/fields/Primary_caregiver_has_past_Yes__c.field-meta.xml
<CustomField>
    <fullName>Primary_caregiver_has_past_Yes__c</fullName>
    <inlineHelpText>Yes-Primary caregiver has a past or current mental health problem(If yes,please select one)</inlineHelpText>
    <label>Primary caregiver has past Yes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currently in treatment</fullName>
            </value>
            <value>
                <fullName>Not engaged in treatment</fullName>
            </value>
            <value>
                <fullName>Unknown treatment status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>