force-app/main/default/objects/Assessment__c/fields/Primary_caregiver_mental_health__c.field-meta.xml
<CustomField>
    <fullName>Primary_caregiver_mental_health__c</fullName>
    <inlineHelpText>Primary caregiver mental health since the MFIRA or the last MFRRA (select one)</inlineHelpText>
    <label>Primary caregiver mental health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No history of mental health problem (0)</fullName>
                <default>true</default>
                <label>No history of mental health problem (0)</label>
            </value>
            <value>
                <fullName>No current mental health problem;  no intervention needed (0)</fullName>
            </value>
            <value>
                <fullName>Yes, mental health problem; problem is being addressed (0)</fullName>
            </value>
            <value>
                <fullName>Yes, mental health problem; problem is NOT being addressed (1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>