force-app/main/default/objects/Assessment__c/fields/Primary_caregiver_provides_physical_care__c.field-meta.xml
<CustomField>
    <fullName>Primary_caregiver_provides_physical_care__c</fullName>
    <inlineHelpText>Primary caregiver provides physical care consistent with each child&apos;s needs</inlineHelpText>
    <label>Primary caregiver provides physical care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (0)</fullName>
                <default>true</default>
                <label>Yes (0)</label>
            </value>
            <value>
                <fullName>No (1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>