force-app/main/default/objects/Assessment__c/fields/Prior_CPS_response_IR_AR__c.field-meta.xml
<CustomField>
    <fullName>Prior_CPS_response_IR_AR__c</fullName>
    <inlineHelpText>Prior CPS response(IR/AR)</inlineHelpText>
    <label>Prior CPS response(IR/AR)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None(0)</fullName>
                <default>true</default>
                <label>None(0)</label>
            </value>
            <value>
                <fullName>One(1)</fullName>
            </value>
            <value>
                <fullName>Two or More(2)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>