force-app/main/default/objects/Assessment__c/fields/Provider_appears_competent_coherent__c.field-meta.xml
<CustomField>
    <fullName>Provider_appears_competent_coherent__c</fullName>
    <inlineHelpText>Provider appears competent, coherent, and currently able to carry out his/her responsibilities and poses no immediate danger to the child</inlineHelpText>
    <label>Provider appears competent, coherent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>