force-app/main/default/objects/Assessment__c/fields/RISK_LEVEL__c.field-meta.xml
<CustomField>
    <fullName>RISK_LEVEL__c</fullName>
    <label>RISK LEVEL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Very High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>