force-app/main/default/objects/Assessment__c/fields/Route_to_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Route_to_Supervisor__c</fullName>
    <label>Route to Supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>