force-app/main/default/objects/Assessment__c/fields/RR1_Score__c.field-meta.xml
<CustomField>
    <fullName>RR1_Score__c</fullName>
    <label>Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>