force-app/main/default/objects/Assessment__c/fields/SAFEC_Age_0_5_Years_old__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Age_0_5_Years_old__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age 0-5 Years old</label>
    <type>Checkbox</type>
</CustomField>