force-app/main/default/objects/Assessment__c/fields/SAFEC_At_the_completion_closure__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_At_the_completion_closure__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>At the completion/closure  of the investigation if the case has been opened longer than 3 months</inlineHelpText>
    <label>At the completion/closure</label>
    <type>Checkbox</type>
</CustomField>