force-app/main/default/objects/Assessment__c/fields/SAFEC_At_the_Initial_face_to_facecontact__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_At_the_Initial_face_to_facecontact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>At the Initial face to face contact with the alleged victim and contact or attempted contact with the caregiver</inlineHelpText>
    <label>At the Initial face to face contact</label>
    <type>Checkbox</type>
</CustomField>