force-app/main/default/objects/Assessment__c/fields/SAFEC_At_time_of_trial_home_visit__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_At_time_of_trial_home_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At time of trial home visit</label>
    <type>Checkbox</type>
</CustomField>