force-app/main/default/objects/Assessment__c/fields/SAFEC_Before_Completing_a_case__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Before_Completing_a_case__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Before Completing a case reconsideration</inlineHelpText>
    <label>Before Completing a case reconsideration</label>
    <type>Checkbox</type>
</CustomField>