force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver__c</fullName>
    <label>Caregiver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>