force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_demonstrated_effective__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_demonstrated_effective__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caregiver has demonstrated effective</label>
    <type>Checkbox</type>
</CustomField>