force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_describes_Comments__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_describes_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>