force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_did_not_agree_to_safety__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_did_not_agree_to_safety__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Caregiver did not agree to a safety Plan</inlineHelpText>
    <label>Caregiver did not agree to a safety Plan</label>
    <type>Checkbox</type>
</CustomField>